fixed wee bug with alignment of items positioning on dropdown list

--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* font-family: 'PT Sans', sans-serif; */
   font-family: 'Raleway', sans-serif;
 }
-.app{
+/* .app{
   min-height: 100vh;
-}
+} */
 
-/* Green Container */
 .green-content {
   height: auto;
   background:#119DA4;
-  /* background: linear-gradient(to right, red , blue); */
   position:relative;
   color: white;
   padding: 15px 40px;
@@ -26,13 +23,10 @@
 .green-diagonal{
   width: 0;
   height:0;
-  /* position: absolute;
-  bottom:0px; */
   border-bottom: 50px solid #119DA4;
   border-left: 100vw solid transparent;
 }
 
-/* Sapphire Diagonal */
 .sapphire-diagonal{
    width: 0;
    height:0;
@@ -40,7 +34,6 @@
    border-left: 100vw solid transparent;
 }
 
-/* Sapphire Container */
 .sapphire-content{
   height: auto;
   background:#175f77;
@@ -64,7 +57,6 @@
    border-left: 100vw solid transparent;
 }
 
-/* White Container */
 .white-content{
   height: auto;
   background: white;
@@ -95,7 +87,6 @@ h1 {
 }
 h2 {
   text-align: left;
-  /* margin-bottom: 10px; */
   font-family: 'Wire One', sans-serif; 
   font-size: 60px;
 }
@@ -109,8 +100,8 @@ h3 {
 
 p {
   margin-bottom: 10px;
-  /* font-family: 'Raleway', sans-serif; */
 }
+
 figure > .fig__media {
   width: 350px;
   border: 1px solid black;
@@ -155,7 +146,6 @@ blockquote{
   line-height: 1.3;
   position: relative;
   background-image: linear-gradient(white, #f2eafd);
-  /* background:#f2eafd; */
   border-radius: 4px;
 }
 blockquote::before{
