--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,16 +7,16 @@
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    width: 100%;
   }
   
   .nav-menu {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(4, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 85%;
+    /* width: 85%; */
+    width: 70vw;
     justify-content: end;
     margin-right: 30px;
     z-index: 1;
@@ -39,7 +39,6 @@
     background-color: #119da4;
     border-radius: 4px;
     transition: all 0.2s ease-out;
-    border: 1px solid white;
   }
   
   .fa-bars {
@@ -52,10 +51,6 @@
   .fa-caret-down {
     margin-left: 5px;
   }
-
-  /* .nav-links-mobile {
-    display: none;
-  } */
 
   /* .navbar-logo {
     color: #ffffff;
@@ -77,26 +72,30 @@
   
   @media screen and (max-width: 960px) {
 
-    /* .NavbarItems {
+    .NavbarItems {
       position: relative;
-    } */
-  
+    }
+
     .nav-menu {
-      display: flex;
-      flex-direction: column;
+      display: block;
+      /* display: flex; */
+      /* flex-direction: column; */
       width: 100%;
+      height: 79vh;
       position: absolute;
       top: 80px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
     }
-  
+
     .nav-menu.active {
       background: #242222;
       left: 0;
+      opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+      position: absolute;
     }
   
     .nav-links {
@@ -133,27 +132,7 @@
       color: #fff;
       font-size: 32px;
     }
-  
-    /* .nav-links-mobile {
-      display: block;
-      text-align: center;
-      padding: 24px;
-      margin: 32px auto;
-      border-radius: 4px;
-      width: 80%;
-      background: #1888ff;
-      text-decoration: none;
-      color: #fff;
-      font-size: 24px;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #1888ff;
-      transition: 250ms;
-    } */
-  
-    button {
-      display: none;
-    }
   }
+
+  
+  
